src/landing/home.css
/* ... */
/* Active Selected Menu Items */
/* .active_menu {
    border-bottom: 2px solid #2D4B9A!important;
    border-radius: 0 !important;
    font-weight: 900 !important;
    color: #2D4B9A !important;

} */


/* Tab View css */


@media screen and (max-width: 900px) and (min-width: 600px) {
    .header-main-sticky {
        display: none !important;
    }

    .firstTitle {
        font-size: 36px !important;
        line-height: 60px !important;
}
.heading {
    font-size: 40px !important;
}

.subheading {
    font-size: 26px !important;
    line-height: 3rem !important;
    padding: 10px 50px !important;
}
.customeMarginTop {
    margin-top: 6rem !important;
}

.customeMarginBottom {
    margin-bottom: 6rem !important;
}
.p-0100 {
    padding: 0 60px !important;
}

.wbeDetailsHeading {
    font-size: 30px !important;
}
.wbeWorkDetailsIcon {
    margin-top: 30% !important;
}

.CoreComponentCard ,.CoreComponentCardTwo{
    height: 450px !important;
}
.wbeDetailsContent {
    font-size: 20px !important;
}
.decissionMaker-box-content {
    font-size: 18px !important;
}

.contactLogo {
    margin-left: 30px !important;
    display: block;
    width: 300px !important;
}

.contactText {
    font-size: 20px !important;
    
}


.consortium-text{
    font-size: 18px !important;
}

.consortium-title {
    font-size: 24px !important;
    text-align: center;
    margin-top: 20px !important;
}

.desktop-sampling-map{
    display: none;
}

.mobile-sampling-map{
    display: block;
}
.columnReverse{
    flex-direction: column-reverse !important;
    
}

}



@media only screen and (min-width: 1364px) {
    .banner-section .background-opacity{
        position: absolute;
        background-color: #000;
        opacity: 0.27;
        top: 0;
        bottom: 0;
        right: 0;
        position: absolute;
        left: -16%;
        right: -190px;
        top: 20%;
        bottom: 0;
        background: #0080C8;
        transform: rotate(45deg);
        height: 460px;
    }


}

